# RN-Synth-Gen-Sandbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  PROMPTS.md
notebooks/: 01_matching_sanity.ipynb
src/trajguard/: __init__.py
src/trajguard/attacks/: __init__.py  base.py
src/trajguard/datamodel/: __init__.py  entities.py
src/trajguard/datasets/: __init__.py  base.py  cleaning.py  geolife.py
src/trajguard/evaluation/: __init__.py  base.py
src/trajguard/experiments/: __init__.py  registry.py
src/trajguard/maps/: __init__.py  base.py  network.py  osm.py
src/trajguard/matching/: __init__.py  base.py  leuven.py  quality.py
src/trajguard/privacy/: __init__.py  base.py
src/trajguard/reporting/: __init__.py
src/trajguard/representation/: __init__.py
src/trajguard/synthesis/: __init__.py  base.py
tests/: conftest.py  test_cleaning.py  test_geolife.py  test_interfaces.py  test_maps.py  test_matching.py  test_registry.py
tests/fixtures/: build_fixtures.py
tests/fixtures/geolife/: MANIFEST.json
tests/fixtures/geolife/Data/000/Trajectory/: 20081110013637.plt  20081112023003.plt  20081114101436.plt  20090516091038.plt  20090521231053.plt  20090702022530.plt  20090703002800.plt
tests/fixtures/geolife/Data/001/Trajectory/: 20081026081229.plt  20081027111634.plt  20081028102805.plt  20081028235048.plt  20081029110529.plt  20081103133204.plt  20081104054859.plt  20081105110052.plt  20081106051423.plt  20081106133604.plt  20081111114304.plt  20081114130723.plt  20081117042454.plt
tests/fixtures/maps/beijing/: edges.parquet  graph.graphml  nodes.parquet
