[project]
name = "trajguard"
version = "0.1.0"
description = "Trajectory privacy attack & protection benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "leuvenmapmatching>=1.1.4",
    "numpy>=2.4.6",
    "osmnx>=2.1",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-geopandas>=1.1.4.20260628",
    "types-networkx>=3.6.1.20260624",
]
notebooks = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajguard"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["leuvenmapmatching.*"]
ignore_missing_imports = true  # no py.typed marker (v1.1.4)

[tool.pytest.ini_options]
testpaths = ["tests"]
